--- a/map.css
+++ b/map.css
@@ -26,6 +26,18 @@ html, body {margin:0;padding:0;height:100%;width:100%}
 .block .bottom { float: left; width: 100%; }
 
 
-#slider-fit {
-    padding: 0 16px;
+#slider {
+    height: 10px;
+}
+
+#slider .noUi-connect {
+    background: #c0392b;
+}
+
+#slider .noUi-handle {
+    height: 18px;
+    width: 18px;
+    top: -5px;
+    right: -9px; /* half the width */
+    border-radius: 9px;
 }
