--- a/map.css
+++ b/map.css
@@ -40,7 +40,7 @@ html, body {margin:0;padding:0;height:100%;width:100%}
     width: 70px;
     height: 50vh;
     display: inline-block;
-    vertical-align: baseline;
+    vertical-align: top;
 
 }
 #gallery{
