added custom bulleinfo

--- a/map.css
+++ b/map.css
@@ -4,6 +4,36 @@ html, body {margin:0;padding:0;height:100%;width:100%}
 }
 
 
+.imgbulle {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+.imgbulle .bulle {
+    visibility: hidden;
+    width: 120px;
+    color: black;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1000;
+    /*border:3px solid black;*/
+    bottom: 100%;
+    left: 50%;
+    margin-left: -60px;
+    background-color:white;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.imgbulle:hover .bulle {
+    visibility: visible;
+    opacity: 1;
+}
+
+
 .popup {
     text-align:center;
 }
@@ -68,3 +98,4 @@ html, body {margin:0;padding:0;height:100%;width:100%}
     right: -9px; /* half the width */
     border-radius: 9px;
 }
+
