Added image analysis

--- a/map.css
+++ b/map.css
@@ -12,7 +12,7 @@ html, body {margin:0;padding:0;height:100%;width:100%}
 
 .imgbulle .bulle {
     visibility: hidden;
-    width: 120px;
+    width: 400px;
     color: black;
     text-align: center;
     border-radius: 6px;
@@ -51,16 +51,16 @@ html, body {margin:0;padding:0;height:100%;width:100%}
 .popup .cycle a.next { float:right; }
 
 .galleryyear        { display:none; }
-.galleryyear .active { display:block; }
+.galleryyear .active {  display:block; }
 
 
-.block {width: 100%; height:100%;overflow: hidden; padding:0px; }
-.block .top { /* style stuff */ }
+.block {width: 95%; height:100%;overflow: hidden; padding:0px; margin-left:5% }
+.block .top {margin-left:10%; margin-right: 10% }
 .block .bottom { float: left; width: 100%; }
 
 #pichardGenerative{
-    width:40vw;
-    padding: 10px;
+    width:100%;
+    padding: 0px;
     white-space: nowrap;
 
 }
@@ -75,7 +75,7 @@ html, body {margin:0;padding:0;height:100%;width:100%}
 }
 #gallery{
     display: inline-block;
-    width: 100%;
+    width: 85%;
     vertical-align: baseline;
 }
 
@@ -84,18 +84,26 @@ html, body {margin:0;padding:0;height:100%;width:100%}
 
 }
 #slider {
-    height: 10px;
+    height: 16px;
 }
 
 #slider .noUi-connect {
-    background: #c0392b;
+    background: rgba(0, 105, 146, 0.55);
 }
-
+/*006992*/
 #slider .noUi-handle {
-    height: 18px;
-    width: 18px;
-    top: -5px;
-    right: -9px; /* half the width */
-    border-radius: 9px;
+    background: #ecca3e;
+    border: 1px solid #000000;
+    box-shadow:0;
 }
 
+#slider-fit {
+    padding: 0 16px;
+}
+
+img{
+    width: 100%;
+    height: auto;
+    /* Magic! */
+    max-width: 85vw;
+}
