--- a/Notre-equipe.css
+++ b/Notre-equipe.css
@@ -31,7 +31,7 @@
 .u-section-2 .u-image-1 {
   width: 133px;
   height: 133px;
-  background-image: url("images/kev.png");
+  background-image: url("images/kev.webp");
   background-position: 50% 50%;
   margin: 0 auto 0 0;
 }
@@ -51,7 +51,7 @@
 .u-section-2 .u-image-2 {
   width: 133px;
   height: 133px;
-  background-image: url("images/favre.png");
+  background-image: url("images/favre.webp");
   background-position: 50% 50%;
   margin: 0 auto 0 0;
 }
@@ -71,7 +71,7 @@
 .u-section-2 .u-image-3 {
   width: 133px;
   height: 133px;
-  background-image: url("images/theo.png");
+  background-image: url("images/theo.webp");
   margin: 0 auto 0 0;
 }
 
@@ -90,7 +90,7 @@
 .u-section-2 .u-image-4 {
   width: 133px;
   height: 133px;
-  background-image: url("images/gui.png");
+  background-image: url("images/gui.webp");
   background-position: 50% 50%;
   margin: 0 auto 0 0;
 }
@@ -110,7 +110,7 @@
 .u-section-2 .u-image-5 {
   width: 133px;
   height: 133px;
-  background-image: url("images/ines.png");
+  background-image: url("images/ines.webp");
   background-position: 50% 50%;
   margin: 0 auto 0 0;
 }
