--- a/EPFL-x-LTM.css
+++ b/EPFL-x-LTM.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(255,255,255,0.6), rgba(255,255,255,0.6)), url("images/wallpaperflare.com_wallpaper.jpg");
+  background-image: linear-gradient(0deg, rgba(255,255,255,0.6), rgba(255,255,255,0.6)), url("images/wallpaperflare.com_wallpaper.webp");
   background-position: 50% 50%;
 }
 
